[gd_scene load_steps=67 format=3 uid="uid://c2e2hmw035cvv"]

[ext_resource type="Script" path="res://Scenes/PlayerTemp.gd" id="3_qv5lc"]
[ext_resource type="Script" path="res://Assets/PlayerAnimations.gd" id="4_dnagu"]
[ext_resource type="Script" path="res://Scenes/PlayerSlide.gd" id="4_s8vyt"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="5_2xnvu"]
[ext_resource type="Script" path="res://Scripts/PlayerParticles.gd" id="5_ks2nr"]
[ext_resource type="Texture2D" uid="uid://b2gmrkvmxi80a" path="res://Assets/Textures/Jump-Sheet.png" id="6_0xsnr"]
[ext_resource type="Texture2D" uid="uid://b3rytiu1p4kxu" path="res://Assets/Textures/Idle1.png" id="6_boip0"]
[ext_resource type="PackedScene" uid="uid://cddpy8wn110kt" path="res://Scenes/health_component.tscn" id="7_jbvia"]
[ext_resource type="Texture2D" uid="uid://cn8bwu11l2wj4" path="res://Assets/Textures/Run1-Sheet.png" id="7_rg2jw"]
[ext_resource type="Script" path="res://PlayerHurtbox.gd" id="7_w5n8h"]
[ext_resource type="Texture2D" uid="uid://cokqlsoinxnxi" path="res://Assets/Textures/Slash3.png" id="8_lpii5"]
[ext_resource type="Texture2D" uid="uid://cq82x7ivekrg6" path="res://Assets/PlayerSlide2.png" id="10_rbakg"]
[ext_resource type="Script" path="res://Scenes/PlayerTilemapDetector.gd" id="11_5tc6m"]
[ext_resource type="Script" path="res://Scenes/PlayerAttackManager.gd" id="11_k66ym"]
[ext_resource type="Script" path="res://Scenes/PressE.gd" id="15_rrqr5"]
[ext_resource type="Texture2D" uid="uid://dmv3op0yjapoy" path="res://Assets/PressE.png" id="16_7tdrr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hb2my"]
radius = 16.0
height = 82.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3x0x0"]
atlas = ExtResource("6_boip0")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pthrm"]
atlas = ExtResource("6_boip0")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q07pb"]
atlas = ExtResource("6_boip0")
region = Rect2(0, 112, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4vqf"]
atlas = ExtResource("6_0xsnr")
region = Rect2(660, 0, 220, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rytb"]
atlas = ExtResource("6_0xsnr")
region = Rect2(880, 0, 220, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yiyl"]
atlas = ExtResource("6_0xsnr")
region = Rect2(1100, 0, 220, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_l15j3"]
atlas = ExtResource("6_0xsnr")
region = Rect2(220, 0, 220, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_82iwq"]
atlas = ExtResource("6_0xsnr")
region = Rect2(440, 0, 220, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bhc6"]
atlas = ExtResource("7_rg2jw")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ntg"]
atlas = ExtResource("7_rg2jw")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lle8"]
atlas = ExtResource("7_rg2jw")
region = Rect2(192, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5lsy"]
atlas = ExtResource("7_rg2jw")
region = Rect2(288, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk67d"]
atlas = ExtResource("7_rg2jw")
region = Rect2(384, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf6lr"]
atlas = ExtResource("7_rg2jw")
region = Rect2(480, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h5fe"]
atlas = ExtResource("7_rg2jw")
region = Rect2(576, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp42t"]
atlas = ExtResource("8_lpii5")
region = Rect2(0, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tpoj"]
atlas = ExtResource("8_lpii5")
region = Rect2(130, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_385sd"]
atlas = ExtResource("8_lpii5")
region = Rect2(260, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_km04x"]
atlas = ExtResource("8_lpii5")
region = Rect2(390, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3o8u"]
atlas = ExtResource("8_lpii5")
region = Rect2(520, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnrfv"]
atlas = ExtResource("8_lpii5")
region = Rect2(650, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk74h"]
atlas = ExtResource("8_lpii5")
region = Rect2(780, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r363i"]
atlas = ExtResource("8_lpii5")
region = Rect2(910, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej4ae"]
atlas = ExtResource("8_lpii5")
region = Rect2(1040, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dome"]
atlas = ExtResource("8_lpii5")
region = Rect2(1170, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ayb3"]
atlas = ExtResource("10_rbakg")
region = Rect2(254, 0, 254, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_clvro"]
atlas = ExtResource("10_rbakg")
region = Rect2(508, 0, 254, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e72a"]
atlas = ExtResource("10_rbakg")
region = Rect2(1778, 0, 254, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6p2q"]
atlas = ExtResource("10_rbakg")
region = Rect2(1524, 0, 254, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qpa7"]
atlas = ExtResource("10_rbakg")
region = Rect2(762, 0, 254, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_crfd5"]
atlas = ExtResource("10_rbakg")
region = Rect2(1016, 0, 254, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_dpc2o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x0x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pthrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q07pb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4vqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rytb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yiyl")
}],
"loop": true,
"name": &"JumpDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l15j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82iwq")
}],
"loop": true,
"name": &"JumpUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bhc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ntg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lle8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5lsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk67d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf6lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h5fe")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp42t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tpoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_385sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km04x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3o8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnrfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk74h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r363i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej4ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dome")
}],
"loop": true,
"name": &"Slash1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ayb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clvro")
}],
"loop": true,
"name": &"SlideBegin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e72a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6p2q")
}],
"loop": true,
"name": &"SlideEnd",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qpa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crfd5")
}],
"loop": true,
"name": &"SlideLoop",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3jf04"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Idle"]
}

[sub_resource type="Animation" id="Animation_mjucu"]
resource_name = "JumpDown"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"JumpDown"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_wl5se"]
resource_name = "JumpUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"JumpUp"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_d83su"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Run"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o1fut"]
resource_name = "Run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 6]
}

[sub_resource type="Animation" id="Animation_rnad5"]
resource_name = "Slash1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"Slash1"]
}

[sub_resource type="Animation" id="Animation_suwmp"]
resource_name = "SlideBegin"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"SlideBegin"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_221jl"]
resource_name = "SlideEnd"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"SlideEnd"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_n04qn"]
resource_name = "SlideLoop"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"SlideLoop"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tieuu"]
_data = {
"Idle": SubResource("Animation_3jf04"),
"JumpDown": SubResource("Animation_mjucu"),
"JumpUp": SubResource("Animation_wl5se"),
"RESET": SubResource("Animation_d83su"),
"Run": SubResource("Animation_o1fut"),
"Slash1": SubResource("Animation_rnad5"),
"SlideBegin": SubResource("Animation_suwmp"),
"SlideEnd": SubResource("Animation_221jl"),
"SlideLoop": SubResource("Animation_n04qn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kr2j"]
size = Vector2(77, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xmnn"]
size = Vector2(77, 120.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xbk5"]
size = Vector2(44.5, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3b3hd"]
size = Vector2(70, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa3bh"]
size = Vector2(68, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wikqq"]
size = Vector2(155, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8pa8"]
size = Vector2(59.9998, 133.382)

[node name="PlayerContainer" type="Node2D"]
position = Vector2(943, 599)

[node name="ParticleManager" type="Node" parent="."]
script = ExtResource("5_ks2nr")

[node name="SandParticles" type="CPUParticles2D" parent="ParticleManager"]
unique_name_in_owner = true
emitting = false
amount = 10
speed_scale = 2.33
explosiveness = 0.11
randomness = 0.59
emission_shape = 3
emission_rect_extents = Vector2(32, 1)
direction = Vector2(1, -1)
spread = 180.0
gravity = Vector2(2.08165e-12, 2)
angular_velocity_max = 1.0
angle_max = 359.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 0.788235, 0.247059, 1)

[node name="TempManager" type="Node" parent="."]
script = ExtResource("3_qv5lc")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("5_2xnvu")
metadata/_edit_lock_ = true

[node name="Slide" type="Node" parent="Player"]
script = ExtResource("4_s8vyt")

[node name="GroundRaycasts" type="Node2D" parent="Player"]

[node name="Center" type="RayCast2D" parent="Player/GroundRaycasts"]
position = Vector2(0, 36)
target_position = Vector2(0, 19)

[node name="Left" type="RayCast2D" parent="Player/GroundRaycasts"]
position = Vector2(-11, 36)
target_position = Vector2(0, 19)

[node name="Right" type="RayCast2D" parent="Player/GroundRaycasts"]
position = Vector2(11, 36)
target_position = Vector2(0, 19)

[node name="PlayerHitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_hb2my")
metadata/_edit_lock_ = true

[node name="AnimationManager" type="Node2D" parent="Player"]
script = ExtResource("4_dnagu")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/AnimationManager"]
position = Vector2(-12, -15)
sprite_frames = SubResource("SpriteFrames_dpc2o")
animation = &"Run"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/AnimationManager"]
libraries = {
"": SubResource("AnimationLibrary_tieuu")
}

[node name="HurtboxComponent" type="Area2D" parent="Player"]
script = ExtResource("7_w5n8h")

[node name="HurtboxCollison" type="CollisionShape2D" parent="Player/HurtboxComponent"]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_5kr2j")
metadata/_edit_lock_ = true

[node name="TilemapDetector" type="Area2D" parent="Player" node_paths=PackedStringArray("_health_component")]
script = ExtResource("11_5tc6m")
_health_component = NodePath("../HealthComponent")

[node name="TileDetectionArea" type="CollisionShape2D" parent="Player/TilemapDetector"]
position = Vector2(0, -3.75)
shape = SubResource("RectangleShape2D_0xmnn")

[node name="HealthComponent" parent="Player" instance=ExtResource("7_jbvia")]
visible = true
position = Vector2(8, -59)
health_bar = "../../../CanvasLayer/PlayerHealthBar"

[node name="AttackManager" type="Node2D" parent="Player"]
position = Vector2(3, -3)
script = ExtResource("11_k66ym")

[node name="ShortAttack" type="Area2D" parent="Player/AttackManager"]
metadata/_edit_lock_ = true

[node name="AD" type="CollisionShape2D" parent="Player/AttackManager/ShortAttack"]
position = Vector2(39, -1)
shape = SubResource("RectangleShape2D_7xbk5")
disabled = true
metadata/_edit_lock_ = true

[node name="W" type="CollisionShape2D" parent="Player/AttackManager/ShortAttack"]
position = Vector2(3, -64)
shape = SubResource("RectangleShape2D_3b3hd")
disabled = true
metadata/_edit_lock_ = true

[node name="S" type="CollisionShape2D" parent="Player/AttackManager/ShortAttack"]
position = Vector2(3, 64)
shape = SubResource("RectangleShape2D_pa3bh")
disabled = true
metadata/_edit_lock_ = true

[node name="LongAttack" type="Area2D" parent="Player/AttackManager"]
metadata/_edit_lock_ = true

[node name="AD" type="CollisionShape2D" parent="Player/AttackManager/LongAttack"]
position = Vector2(94.5, 0)
shape = SubResource("RectangleShape2D_wikqq")
disabled = true
metadata/_edit_lock_ = true

[node name="W" type="CollisionShape2D" parent="Player/AttackManager/LongAttack"]
position = Vector2(2, -108.309)
shape = SubResource("RectangleShape2D_s8pa8")
disabled = true
metadata/_edit_lock_ = true

[node name="S" type="CollisionShape2D" parent="Player/AttackManager/LongAttack"]
position = Vector2(3.00012, 106)
shape = SubResource("RectangleShape2D_s8pa8")
disabled = true
metadata/_edit_lock_ = true

[node name="PressE" type="Node2D" parent="Player" node_paths=PackedStringArray("_sprite")]
position = Vector2(4, -82)
script = ExtResource("15_rrqr5")
_sprite = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="Player/PressE"]
texture = ExtResource("16_7tdrr")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Player/HurtboxComponent" to="Player/HurtboxComponent" method="_on_area_entered"]
[connection signal="area_exited" from="Player/HurtboxComponent" to="Player/HurtboxComponent" method="_on_area_exited"]
[connection signal="body_entered" from="Player/HurtboxComponent" to="Player/HurtboxComponent" method="_on_body_entered"]
[connection signal="body_exited" from="Player/HurtboxComponent" to="Player/HurtboxComponent" method="_on_body_exited"]
[connection signal="body_shape_entered" from="Player/TilemapDetector" to="Player/TilemapDetector" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="Player/TilemapDetector" to="Player/TilemapDetector" method="_on_body_shape_exited"]
